--- a/js.html
+++ b/js.html
@@ -31,7 +31,7 @@
             }
             "> -->
             <!-- 리펙토링 -->
-            <input id="night_day" type="button" value="night"
+            <!-- <input id="night_day" type="button" value="night"
             onclick="
             const target = document.querySelector('body');
             if(this.value === 'night') {
@@ -42,6 +42,33 @@
                 target.style.backgroundColor = 'white';
                 target.style.color = 'black';
                 this.value = 'night';
+            }
+            "> -->
+            <input id="night_day" type="button" value="night"
+            onclick="
+            const target = document.querySelector('body');
+            if(this.value === 'night') {
+                target.style.backgroundColor = 'black';
+                target.style.color = 'white';
+                this.value = 'day';
+
+                let alist = document.querySelectorAll('a');
+                let i = 0;
+                while(i < alist.length) {
+                    alist[i].style.color = 'powderblue';
+                    i = i + 1;
+                }
+            } else {
+                target.style.backgroundColor = 'white';
+                target.style.color = 'black';
+                this.value = 'night';
+                
+                let alist = document.querySelectorAll('a');
+                let i = 0;
+                while(i < alist.length) {
+                    alist[i].style.color = 'black';
+                    i = i + 1;
+                }
             }
             ">
         </h1>
