--- a/js.html
+++ b/js.html
@@ -3,6 +3,7 @@
     <head>
         <title>WEB-JS</title>
         <link rel="stylesheet" href="style.css">
+        <script src="colors.js"></script>
         <meta charset="utf-8">
     </head>
     <body>
@@ -44,7 +45,7 @@
                 this.value = 'night';
             }
             "> -->
-            <input id="night_day" type="button" value="night"
+            <!-- <input id="night_day" type="button" value="night"
             onclick="
             const target = document.querySelector('body');
             if(this.value === 'night') {
@@ -70,7 +71,8 @@
                     i = i + 1;
                 }
             }
-            ">
+            "> -->
+            <input id="night_day" type="button" value="night" onclick="nightDayHandler(this);" >
         </h1>
         <div id="grid">
             <ol>
