--- a/web.html
+++ b/web.html
@@ -3,37 +3,12 @@
     <head>
         <title>WEB</title>
         <link rel="stylesheet" href="style.css">
+        <script src="colors.js"></script>
         <meta charset="utf-8">
     </head>
     <body>
         <h1><a href="web.html">WEB</a>
-            <input id="night_day" type="button" value="night"
-            onclick="
-            const target = document.querySelector('body');
-            if(this.value === 'night') {
-                target.style.backgroundColor = 'black';
-                target.style.color = 'white';
-                this.value = 'day';
-
-                let alist = document.querySelectorAll('a');
-                let i = 0;
-                while(i < alist.length) {
-                    alist[i].style.color = 'powderblue';
-                    i = i + 1;
-                }
-            } else {
-                target.style.backgroundColor = 'white';
-                target.style.color = 'black';
-                this.value = 'night';
-                
-                let alist = document.querySelectorAll('a');
-                let i = 0;
-                while(i < alist.length) {
-                    alist[i].style.color = 'black';
-                    i = i + 1;
-                }
-            }
-            ">
+            <input id="night_day" type="button" value="night" onclick="nightDayHandler(this);" >
         </h1>
         <ol>
             <li><a href="html.html">HTML</a></li>
